tests/error/enum_underlying_type.bz
// error: invalid type 'char' for underlying type of enum; it must be an integer type
enum E: char {}
